variables added, timer bugfix, translator code, microsoft codes, weather places

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "name": "SAB",
     "version": "1.0",
     "description": "Smart Address Bar",
-    "permissions": ["searchProvider"],
+    "permissions": [],
     "chrome_settings_overrides": {
       "search_provider": {
         "name": "SAB",
